fix overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,13 @@ nav .brand-logo {
       background-color: #0581c1;
       margin-bottom: 10px;
   }
+
+}
+
+@media only screen and (min-width: 992px){
+  html {
+    overflow-x: hidden;
+  }
 }
 
 img {
@@ -70,5 +77,5 @@ img {
 
 label {
   font-size: 1.1rem;
-  color: #9e9e9e;
+  color: #6e6c79;
 }
